# dynamic_obstacle_avoidance

./: CMakeLists.txt  README.md  package.xml
config/: parameters.yaml
dockerfile/: Dockerfile  run.sh
launch/: dynamic_obstacle_avoidance.launch
msg/: CustomInfo.msg  ObstacleArray.msg  RobotState.msg
scripts/: apfm_obstacle_avoidance.py  forceCalculationApfModified.py  scenario_controller.py
src/: forceCalculationApfModified.py  migbotAvoidance.py  migbot_controller.py  obstacle_avoidance.py  run_controller.py
test/: test_scenario_controller.py  test_scenario_controller.test
