<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacle_avoidance</name>
  <version>0.0.1</version>
  <description>Dynamic Obstacle Avoidance using Artificial Potential Field</description>

  <maintainer email="kelvinkefren@gmail.com">Kelvin Kefren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

</package>
